2001-05-06  Rob Savoye  <rob@blackpeter.welcomehome.org>

	* debian/rules: Install all the doc formats.
	* redhat/dejagnu.spec: Install all the doc formats.
	* Clean.tcl: Also nuke all Emacs backup files.
	* Makefile.am: Fix dependencies on tarball target. Add new target
	to build Debian packages. Add $(includedir) to install-data-local
	target so dejagnu.h gets installed in the right place.

2001-05-03  Rob Savoye  <rob@peggyo.welcomehome.org>

	* doc/Makefile.am: Make all paths absolute, cause some versions of
	the db2* tools are braindead.
	* doc/overview.sgml: Update version numbers and log.
	* doc/user.sgml: Add mention of dejagnu.h header file.
	* doc/ref.sgml: Add chapter on dejagnu.h header file for unit
	testing.
	* config/default.exp: New file for default config settings for
	simple native testsuites that don't need anything else.
	* lib/dejagnu.exp: Add $text\r\n to all strings, to make sure we
	only get one line at a time.
	* testsuite/libdejagnu: New directory for dejagnu library test
	cases.
	* testsuite/libdejagnu/unit.cc: Test case for dejagnu.h.
	* testsuite/libdejagnu/tunit.exp: Test driver for dejagnu.h.
	* testsuite/libdejagnu/Makefile.am: New makefile to build the test
	case.
	* testsuite/libdejagnu/Makefile.in: Generated.
	* testsuite/Makefile.am: Add libdejagnu to SUBDIRS. Replace the
	site.exp rule, cause we don't want the $tool setting, so we run
	all the test suites. Don't pass the tool name for "make check".
	* configure.in: Add testsuite/libdejagnu/Makefile to AC_OUTPUT.
	
2001-05-02  Rob Savoye  <rob@peggyo.welcomehome.org>

	* Makefile.am: Rename dist2 to tarball target. Fix the version
	number to have the minor release too.
	* doc/Makefile.am: Convert all paths from relative to absolute,
	cause not all verions of the db2* tools can work with a relative
	path.
	* redhat/dejagnu.spec: Update version number, and install
	dejagnu.h.
	* debian/changelog: Update version number.
	* debian/rules: and install dejagnu.h
