@@ -1,3 +1,8 @@
+2001-05-08  Rob Savoye  <rob@peggyo.welcomehome.org>
+
+	* lib/dejagnu.exp: Trim off test state part of the message, so we
+	don't duplicate it.
+
 2001-05-06  Rob Savoye  <rob@blackpeter.welcomehome.org>
 
 	* debian/rules: Install all the doc formats.
